// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  border-radius: 0.3rem;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  min-height: 8rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: white;
}

<div
  class="c0"
>
  Hello world
</div>
`;

exports[`it works loading 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0.3rem;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  min-height: 8rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: white;
}

.c1 {
  width: 4rem;
}

.c2 {
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  border-style: solid;
  border-radius: 0.3rem;
  border-width: 1px;
  width: 100%;
  height: 0.75rem;
  background-color: white;
  border-color: #d4d4d4;
}

.c4 {
  position: relative;
  top: -1px;
  left: 0;
  border-radius: 0.6rem;
  width: 0.75rem;
  height: 0.75rem;
  background-color: #d4d4d4;
}

.c5 {
  -webkit-animation: igSzjp;
  animation: igSzjp;
  -webkit-transform: translateX(50%);
  -ms-transform: translateX(50%);
  transform: translateX(50%);
  left: -50%;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-duration: 0.4s;
  animation-duration: 0.4s;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4 c5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`it works with heading 1`] = `
.c0 {
  border-radius: 0.3rem;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  min-height: 8rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: white;
}

.c1 {
  font-size: 1.875rem;
  font-weight: 700;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  margin-bottom: 1rem;
  color: #292B3E;
}

<div
  class="c0"
>
  <h2
    class="c1"
  >
    heading
  </h2>
  body
</div>
`;
